# stow-python

./: .gitignore  DEVELOPMENT.md  README.md  WORKFLOW.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  python-publish.yml
docs/: EXTREME.md  TESTING.md  architecture.md  perl-differences.md
scripts/: build_single_file.py
src/stow_python/: __init__.py  chkstow.py  cli.py  stow.py  types.py  util.py
tests/: conftest.py  get_gnu_stow_for_testing_identical_behavior.sh  test_chkstow.py  test_chkstow_both.py  test_cleanup_invalid_links.py  test_cleanup_invalid_links_both.py  test_cli.py  test_cli_options.py  test_defer.py  test_dotfiles.py  test_dotfiles_both.py  test_examples.py  test_find_stowed_path.py  test_foldable.py  test_foldable_both.py  test_ignore.py  test_join_paths.py  test_link_dest_within_stow_dir.py  test_link_dest_within_stow_dir_both.py  test_oracle.py  test_oracle_chkstow.py  test_oracle_hypothesis.py  test_parent.py  test_rc_options.py  test_stow.py  test_stow_both.py  test_unstow.py  test_unstow_both.py  testutil.py
