[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "stow-python"
version = "2.4.1"
description = "Stow-Python - Python reimplementation of GNU Stow symlink farm manager"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Istvan Sarandi", email = "istvan.sarandi@gmail.com"},
]
keywords = ["stow", "symlink", "dotfiles", "package-manager"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
tests = ["pytest"]

[project.scripts]
stow = "stow_python:main"
chkstow = "stow_python.chkstow:main"

[project.urls]
Homepage = "https://github.com/isarandi/stow-python"
"GNU Stow" = "https://www.gnu.org/software/stow/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
